2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* VBCompilerPanel.cs:
	* Gui/ChooseRuntimePanel.cs:
	* Gui/VBDocConfigurationPanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* VBNetBinding.addin.xml:
	* ProjectNodeBuilder.cs:
	* Parser/Parser.cs:
	* Parser/Resolver.cs:
	* VBBindingCompilerServices.cs:
	* VBLanguageBinding.cs: Follow architecture changes.

	* Gui/OutputOptionsPanel.cs:
	* VB.glade: Removed dialog now implemented in Monodevelop.Base.
	
	* Project/VBCompilerParameters.cs: Moved some parameters and enum
	definitions to DotNetProjectConfiguration.
	
	* Project/VBProject.cs:
	* VBBindingExecutionServices.cs: Removed. Not needed any more.
	* Makefile.am: Updated.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* VBBindingCompilerServices.cs: StatusBarService.ProgressMonitor is not a
	StatusBar widget any more.

2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>

	* VBLanguageBinding.cs: Added CommentTag to be used by (Un)CommentCode

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Imported from #D and made to work with MD tools and namespaces