@@ -41,10 +41,10 @@ namespace VBBinding
 			return compilerServices.CanCompile(fileName);
 		}
 		
-		public ICompilerResult Compile (ProjectFileCollection projectFiles, ProjectReferenceCollection references, DotNetProjectConfiguration configuration)
+		public ICompilerResult Compile (ProjectFileCollection projectFiles, ProjectReferenceCollection references, DotNetProjectConfiguration configuration, IProgressMonitor monitor)
 		{
 			Debug.Assert(compilerServices != null);
-			return compilerServices.CompileProject (projectFiles, references, configuration);
+			return compilerServices.Compile (projectFiles, references, configuration, monitor);
 		}
 		
 		public void GenerateMakefile (Project project, Combine parentCombine)
